attempting to fix project card overflow issues

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,9 @@ body {
     padding: 0;
     display: grid;
     grid-template-columns: minmax(250px, 1fr) 5fr;
-    height: 100vh;
     font-family: 'Roboto';
+    height: 100vh;
+    overflow: hidden;
 }
 
 .sidebar {
@@ -197,14 +198,14 @@ ul {
     display: grid;
     grid-template-columns: 3fr 1fr;
     padding: 25px 25px 25px 15px;
-    gap: 20px
+    gap: 20px;
 }
 
 .project-card-container {
     margin-top: 10px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 0.7fr));
-    gap: 20px
+    gap: 20px;
 }
 
 .project-card {
@@ -213,7 +214,7 @@ ul {
     border-radius: 8px;
     display: grid;
     grid-template-columns: 6px 1fr;
-    grid-template-rows: 3fr 2fr;
+    grid-template-rows: 3fr 1fr;
     overflow: hidden;
 }
 
@@ -245,25 +246,4 @@ ul {
 .card-icons > img {
     height: 20px;
     cursor: pointer;
-}
-
-.announcement-container {
-    height: 250px;
-    background-color: var(--secondary-color);
-    margin-top: 10px;
-    border-radius: 8px;
-    margin-bottom: 25px;
-}
-
-.announcement-card {
-}
-
-
-
-.trending-container {
-    height: 258px;
-    background-color: var(--secondary-color);
-    margin-top: 10px;
-    border-radius: 8px;
-    margin-bottom: 25px;
 }
